fix: major fixes